--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: @book, local: true) do |form| %>
-  <% if @book.errors.any? %>
+<%= form_with(model: book) do |form| %>
+  <% if book.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
+      <h2><%= pluralize(book.errors.count, "error") %> prohibited this book from being saved:</h2>
 
       <ul>
-        <% @book.errors.full_messages.each do |message| %>
+        <% book.errors.full_messages.each do |message| %>
           <li><%= message %></li>
         <% end %>
       </ul>
@@ -24,6 +24,11 @@
   <div class="field">
     <%= form.label :description %>
     <%= form.text_area :description %>
+  </div>
+
+  <div class="field">
+    <%= form.label :isbn %>
+    <%= form.text_field :isbn %>  <!-- ISBN Field -->
   </div>
 
   <div class="actions">
