--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,4 @@
-<h1>Books</h1>
-
-<%= link_to 'Add New Book', new_book_path, class: 'btn btn-primary mb-3' %>
+<h1>Book List</h1>
 
 <table>
   <thead>
@@ -8,21 +6,26 @@
       <th>Title</th>
       <th>Author</th>
       <th>Description</th>
+      <th>ISBN</th> <!-- New Column -->
       <th>Actions</th>
     </tr>
   </thead>
+
   <tbody>
     <% @books.each do |book| %>
       <tr>
         <td><%= book.title %></td>
         <td><%= book.author %></td>
         <td><%= book.description %></td>
-        <td class="action-buttons">
+        <td><%= book.isbn %></td> <!-- Display ISBN -->
+        <td class="actions">
           <%= link_to 'Show', book_path(book), class: 'btn btn-primary' %>
           <%= link_to 'Edit', edit_book_path(book), class: 'btn btn-warning' %>
-          <%= button_to 'Delete', book_path(book), method: :delete, class: 'btn btn-danger', data: { turbo_confirm: 'Are you sure?' } %>
+          <%= link_to 'Delete', book, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
         </td>
       </tr>
     <% end %>
   </tbody>
 </table>
+
+<%= link_to 'New Book', new_book_path, class: 'btn btn-primary' %>
